Add site colors to SASS variable partial

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,3 +2,8 @@
 @include font('RobotoMono', '../fonts/RobotoMono')
 
 $font: RobotoMono, sans-serif;
+$light-gray: #D3D4D9;
+$red: #BB0A21;
+$black: #252627;
+$blue: #222DA3;
+$white: #FFF9FB;
