--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -8,5 +8,6 @@
              url($font-file + '.svg#aller') format('svg');
         font-weight: normal;
         font-style: normal;
+        font-display: swap;
     }
 }
