--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -8,9 +8,7 @@ header {
     display: grid;
     grid-template: 1fr / 1fr 1fr;
     background: $white;
-    -webkit-box-shadow: 0px 5px 10px 0px rgba(145,145,145,1);
-    -moz-box-shadow: 0px 5px 10px 0px rgba(145,145,145,1);
-    box-shadow: 0px 5px 10px 0px rgba(145,145,145,1);
+    box-shadow: $shadow;
 }
 
 #header-logo {
@@ -24,7 +22,7 @@ header {
     height: 100px;
     border-radius: 10px;
     background: $red;
-    color: $light-gray;
+    color: $white;
 }
 
 #header-nav-contact-list {
@@ -39,21 +37,22 @@ header {
     margin: 3%;
 }
 
-a {
+li a {
+    color: $black;
     text-decoration: underline $black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     &:hover {
         text-decoration: none;
     }
 }
 
-li a {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+li img { padding: 0 5px 3px }
 
-object {
-    padding-right: 10px;
+span a {
+    color: $white;
+    text-decoration: none;
 }
 
 #body-content {
@@ -75,9 +74,12 @@ object {
     display: flex;
     justify-content: center;
     align-items: center;
-    -webkit-box-shadow: 0px 0px 15px 3px rgba(145,145,145,1);
-    -moz-box-shadow: 0px 0px 15px 3px rgba(145,145,145,1);
-    box-shadow: 0px 0px 15px 3px rgba(145,145,145,1);
+    &:hover {
+        box-shadow: $shadow;
+        .link-text {
+            font-size: calc(19px + 1vmin);
+        }
+    }
 }
 
 #about {
