Change the colors used on the page

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,9 +2,6 @@
 @include font('Baloo', '../fonts/BalooChettan')
 
 $font: Baloo, sans-serif;
-$light-gray: #D3D4D9;
-$red: #BB0A21;
-$black: #252627;
-$blue: #222DA3;
-$white: #FFF9FB;
-$shadow: 0 1px 8px 0 rgba(145,145,145,1);
+$light-green: #F8FCDA;
+$green: #b9cbd0;
+$black: #464655;
