--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -1,100 +1,61 @@
-#index--body-wrapper {
+#body-wrapper {
     height: 100%;
     display: grid;
     grid-template: 1fr 6fr / 1fr;
+    background: $green;
 }
 
-header {
+#body-header {
+    padding: 0 3%;
     display: grid;
-    grid-template: 1fr / 1fr 1fr;
-    background: $white;
-    box-shadow: $shadow;
+    grid-template: 1fr/ 1fr 1fr;
+    align-items: center;
+    background: $light-green;
+    -webkit-box-shadow: 0 0 3px 0 #2f2f2f;
+    -moz-box-shadow: 0 0 3px 0 #2f2f2f;
+    box-shadow: 0 0 3px 0 #2f2f2f;
+
+    #body-header--tagline {
+        display: flex;
+        flex: 2 1 auto;
+        flex-flow: row nowrap;
+        justify-content: flex-start;
+        align-items: center;
+        font-weight: bold;
+    }
+
+    #body-header--navlinks {
+        justify-self: right;
+    }
 }
 
 #header-logo {
     cursor: pointer;
-    margin: 15px 25px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    width: 100px;
-    height: 100px;
-    border-radius: 10px;
-    background: $red;
-    color: $white;
+    margin: 0 3% 0 0;
 }
 
-#header-nav-contact-list {
-    justify-self: flex-end;
-    align-items: center;
-    margin: 15px 25px;
+#header-text {
+    font-size: calc(23px + 1vmin);
+    padding-bottom: 1%;
 }
 
-.list-item {
-    display: flex;
-    align-items: center;
-    margin: 3%;
-}
+.navlink-item {
+    a {
+        color: $black;
+        display: flex; // Necessary to make the icons and the text line up properly
+        align-items: center;
+        text-decoration: $black underline;
 
-li a {
-    color: $black;
-    text-decoration: underline $black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    &:hover {
-        text-decoration: none;
-    }
-}
+        &:hover {
+            text-decoration: none;
+        }
 
-li img { padding: 0 5px 3px }
-
-span a {
-    color: $white;
-    text-decoration: none;
-}
-
-#body-content {
-    display: grid;
-    grid-template: repeat(5, 1fr) / repeat(9, 1fr);
-    grid-template-areas:
-        ".   .   .   .   .      .      .   .    ."
-        ".   .   .   .   .      .      . extras ."
-        ".   .   .   .   . cooperation . extras ."
-        ".   .   . sales . cooperation . extras ."
-        ". about . sales . cooperation . extras .";
-}
-
-.body-navlink {
-    cursor: pointer;
-    background: $blue;
-    color: $white;
-    font-size: calc(16px + 1vmin);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    &:hover {
-        box-shadow: $shadow;
-        .link-text {
-            font-size: calc(19px + 1vmin);
+        img {
+            margin: 2%;
         }
     }
-}
 
-#about {
-    grid-area: about;
+    .navlink-link {
+        font-size: calc(10px + 1vmin);
+    }
 }
-
-#sales {
-    grid-area: sales;
-}
-
-#cooperations {
-    grid-area: cooperation;
-}
-
-#extras {
-    grid-area: extras;
-}
-
