--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -2,7 +2,6 @@
     height: 100%;
     display: grid;
     grid-template: 1fr 6fr / 1fr;
-    background: $green;
 }
 
 #body-header {
@@ -57,5 +56,91 @@
 
     .navlink-link {
         font-size: calc(10px + 1vmin);
+    }
+}
+
+// Start of body-content
+
+#body-content {
+    padding: 2% 0 0 3%;
+    display: grid;
+    grid-template: 1fr / 1.5fr 1fr;
+    grid-gap: 0 2%;
+    grid-template-areas:
+        "bio graph"
+        ". graph";
+}
+
+#body-content--about {
+    background: $light-green;
+    border-radius: 15px;
+    padding: 20px;
+    grid-area: bio;
+    height: 60%;
+    //justify-self: center;
+    //align-self: center;
+    display: grid;
+    grid-template: 300px 1fr / 1fr 4fr;
+    grid-template-areas:
+            "mugshot head-and-subheader"
+            "flavor flavor";
+    justify-content: center;
+    align-items: center;
+    -webkit-box-shadow: inset 0 0 4px 0 #000000;
+    -moz-box-shadow: inset 0 0 4px 0 #000000;
+    box-shadow: inset 0 0 4px 0 #000000;
+    .content-mugshot-container {
+        grid-area: mugshot;
+        img {
+            padding: 0;
+            margin: 0;
+            height: 300px;
+            border-radius: 10px;
+        }
+    }
+    .content-text { grid-area: head-and-subheader }
+    p {
+        grid-area: flavor;
+    }
+}
+
+#body-content--navigation {
+    grid-area: graph;
+    height: 90%;
+    display: grid;
+    grid-template: repeat(7, 1fr) / repeat(5, 1fr);
+    grid-template-areas:
+            ". . . about about"
+            ". . . . ."
+            ". . coops coops coops"
+            ". . . . ."
+            ". sales sales sales sales"
+            ". . . . ."
+            "extra extra extra extra extra";
+
+    #about-box { grid-area: about }
+    #coops-box { grid-area: coops }
+    #sales-box { grid-area: sales }
+    #extra-box { grid-area: extra }
+    .content-navbox { background: $orange }
+}
+
+.content-navbox {
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: -2px 0px 3px 1px rgba(0,0,0,1);
+
+    a {
+        font-size: calc(15px + 1vmin);
+        color: $black;
+    }
+
+    &:hover {
+        box-shadow: -2px 0px 3px 2px rgba(0,0,0,1);
+        a {
+            font-size: calc(16px + 1vmin);
+        }
     }
 }
