Change the colors of the website

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,8 +2,7 @@
 @include font('Baloo', '../fonts/BalooChettan')
 
 $font: Baloo, sans-serif;
-$light-green: #F8FCDA;
+$light-green: #ffffff;
 $green: #b9cbd0;
 $black: #464655;
-$orange: #D1AEA5;
-$weird-green: #B0D1C6;
+$orange: #D64933;
