Remove h1 from header and some unecessary CSS

--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -10,8 +10,6 @@
     grid-template: 1fr/ 1fr 1fr;
     align-items: center;
     background: $light-green;
-    -webkit-box-shadow: 0 0 3px 0 #2f2f2f;
-    -moz-box-shadow: 0 0 3px 0 #2f2f2f;
     box-shadow: 0 0 3px 0 #2f2f2f;
 
     #body-header--tagline {
@@ -31,11 +29,6 @@
 #header-logo {
     cursor: pointer;
     margin: 0 3% 0 0;
-}
-
-#header-text {
-    font-size: calc(23px + 1vmin);
-    padding-bottom: 1%;
 }
 
 .navlink-item {
@@ -70,6 +63,9 @@
         " .  graph";
 }
 
+// Grid Area declarations
+
+// About
 #body-content--about {
     background: $light-green;
     border-radius: 15px;
@@ -83,8 +79,6 @@
             "flavor flavor";
     justify-content: center;
     align-items: center;
-    -webkit-box-shadow: inset 0 0 4px 0 #000000;
-    -moz-box-shadow: inset 0 0 4px 0 #000000;
     box-shadow: inset 0 0 4px 0 #000000;
 
     .content-mugshot-container {
@@ -95,8 +89,6 @@
             margin: 0;
             height: 300px;
             border-radius: 10px;
-            -webkit-box-shadow: 0 0 3px 0 #2f2f2f;
-            -moz-box-shadow: 0 0 3px 0 #2f2f2f;
             box-shadow: 0 0 3px 0 #2f2f2f;
         }
     }
@@ -114,6 +106,7 @@
             font-size: calc(18px + 1vmin);
         }
     }
+}
 
     p {
         grid-area: flavor;
@@ -140,10 +133,10 @@
     #coops-box { grid-area: coops }
     #sales-box { grid-area: sales }
     #extra-box { grid-area: extra }
-    .content-navbox { background: $orange }
 }
 
 .content-navbox {
+    background: $orange;
     cursor: pointer;
     display: flex;
     justify-content: center;
