--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,7 +1,7 @@
 @import "mixins";
-@include font('Baloo', '../fonts/BalooChettan')
+@include font('Futura', '../fonts/Futura')
 
-$font: Baloo, sans-serif;
+$font: Futura, sans-serif;
 $light-green: #ffffff;
 $green: #b9cbd0;
 $black: #464655;
