Rearrange index page to a more logical layout
Remove the grid elements from the content-wrapper and moved that into a more logical view

Consolidate the body content navlinks into a singular entity and moved the about box into an absolutely positioned box

--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -55,46 +55,41 @@
 
 #body-content-wrapper {
     height: 100%;
-    display: grid;
-    grid-template: 0.5fr 1fr / 1.5fr 2fr;
-    grid-template-areas:
-        "about rightside"
-        "underside rightside";
-
-    #body-content--about { grid-area: about }
-    #body-content--underside { grid-area: underside }
-    #body-content--rightside { grid-area: rightside }
 }
 
-// Grid Area declarations
-
-// About
-
 #body-content--about {
-    margin: 3% 0 0 3%;
+    margin-top: 2%;
+    margin-left: 2%;
+    position: absolute;
+    max-width: 40%;
     background: $light-green;
     border-radius: 15px;
     padding: 20px;
     grid-area: bio;
     display: grid;
-    grid-template: 0.25fr / 1fr 3fr;
+    grid-template: 0.4fr / 1fr 3fr;
     grid-template-areas:
             "mugshot head-and-subheader";
     justify-content: center;
     align-items: center;
     box-shadow: inset 0 0 4px 0 #000000;
+}
 
-    .content-mugshot-container {
-        grid-area: mugshot;
-        padding: 5% 5% 0 8%;
-        img {
-            padding: 0;
-            margin: 0;
-            height: 300px;
-            border-radius: 10px;
-            box-shadow: 0 0 3px 0 #2f2f2f;
-        }
+.content-mugshot-container {
+    padding: 5% 5% 0 8%;
+
+    picture {
+        display: block;
     }
+
+    img {
+        padding: 0;
+        margin: 0;
+        height: 250px;
+        border-radius: 10px;
+        box-shadow: 0 0 3px 0 #2f2f2f;
+    }
+}
 
     .content-text {
         grid-area: head-and-subheader;
@@ -113,37 +108,26 @@
 
 // Navlinks
 
-#body-content--underside {
+#body-content--navlinks {
+    height: 100%;
     display: grid;
-    grid-template: repeat(5, 1fr) / repeat(4, 1fr);
+    grid-template: repeat(10, 1fr) / repeat(9, 1fr);
     grid-template-areas:
-        ".   .   .   .  "
-        ".   .   . coops"
-        ". about . coops"
-        ". about . coops"
-        ". about . coops";
+        ".   .   .   .   .   .   .   .   ."
+        ".   .   .   .   .   .   . extra ."
+        ".   .   .   .   .   .   . extra ."
+        ".   .   .   .   . sales . extra ."
+        ".   .   .   .   . sales . extra ."
+        ".   .   . coops . sales . extra ."
+        ". about . coops . sales . extra ."
+        ". about . coops . sales . extra ."
+        ". about . coops . sales . extra ."
+        ". about . coops . sales . extra .";
 
-    #about-box { grid-area: about }
-    #coops-box { grid-area: coops }
-}
-
-#body-content--rightside {
-    display: grid;
-    grid-template: repeat(10, 1fr) / repeat(5, 1fr);
-    grid-template-areas:
-        ".   .   .   .   ."
-        ".   .   . extra ."
-        ". sales . extra ."
-        ". sales . extra ."
-        ". sales . extra ."
-        ". sales . extra ."
-        ". sales . extra ."
-        ". sales . extra ."
-        ". sales . extra ."
-        ". sales . extra .";
-
-    #sales-box { grid-area: sales }
-    #extra-box { grid-area: extra }
+        #about-box { grid-area: about };
+        #coops-box { grid-area: coops };
+        #sales-box { grid-area: sales };
+        #extra-box { grid-area: extra };
 }
 
 .content-navbox {
