Refactor name of variables to be more descriptive

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,7 +2,7 @@
 @include font('Futura', '../fonts/Futura')
 
 $font: Futura, sans-serif;
-$light-green: #ffffff;
-$green: #b9cbd0;
-$black: #464655;
-$orange: #D64933;
+$secondary-highlight: #ffffff;
+$primary-highlight: #b9cbd0;
+$text-color: #464655;
+$background-highlight: #D64933;
