--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -2,10 +2,11 @@
     height: 100%;
     display: grid;
     grid-template: 1fr 6fr / 1fr;
+    overflow-y: scroll;
 }
 
 #body-header {
-    padding: 0 3%;
+    padding: 1% 3%;
     display: grid;
     grid-template: 1fr/ 1fr 1fr;
     align-items: center;
@@ -51,4 +52,10 @@
     .navlink-link {
         font-size: calc(10px + 1vmin);
     }
+}
+
+@media screen and (max-width: 650px) {
+    .navlink-item { margin: 15px }
+    .navlink-text { display: none }
+    .navlink-link img { width: 35px }
 }
