Change the header to be independent on index and other pages
Moved the partial imports from the index page and introduced a differently styled header navlink section for the other pages

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -22,7 +22,7 @@
         font-weight: bold;
     }
 
-    #body-header--navlinks {
+    #body-header--social-navlinks {
         justify-self: right;
     }
 }
