Add comment for index.scss imports

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,6 +11,9 @@ html, body {
     background: $primary-highlight;
 }
 
+// Page Partials
 @import "header";
+
+// Pages
 @import 'pages/index/index';
 @import 'pages/about/about';
