--- a/src/styles/pages/coop/coop.scss
+++ b/src/styles/pages/coop/coop.scss
@@ -7,6 +7,7 @@
 .company-section {
     display: grid;
     padding: 30px 0;
+    box-shadow: 0 0 0 2px rgba(0,0,0,0.75);
     .company-title {
         font-size: calc(1vmin + 14px);
         grid-area: title;
