Change colors of some elements on page

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,4 +5,4 @@ $font: Futura, sans-serif;
 $secondary-highlight: #ffffff;
 $primary-highlight: #b9cbd0;
 $text-color: #464655;
-$background-highlight: #D64933;
+$background-highlight: #f78764;
