--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -69,7 +69,7 @@
         color: $text-color;
         display: flex; // Necessary to make the icons and the text line up properly
         align-items: center;
-        text-decoration: $text-color underline;
+        text-decoration: $background-highlight underline;
 
         &:hover {
             text-decoration: none;
