--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,7 +2,9 @@
 @include font('Futura', '../fonts/Futura')
 
 $font: Futura, sans-serif;
-$secondary-highlight: #ffffff;
-$primary-highlight: #b9cbd0;
-$text-color: #464655;
-$background-highlight: #f78764;
+$secondary-highlight: #717171;
+$primary-highlight: #fff0f0;
+$background-highlight: #e2682a;
+
+$text-color: $primary-highlight;
+$text-color-dark-background: $secondary-highlight;
