--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -2,7 +2,8 @@
     @font-face {
         font-family: $font-family;
         src: url($font-file +'.eot');
-        src: url($font-file +'.eot?#iefix') format('embedded-opentype'),
+        src: local($font-file),
+             url($font-file +'.eot?#iefix') format('embedded-opentype'),
              url($font-file + '.woff') format('woff'),
              url($font-file + '.ttf') format('truetype'),
              url($font-file + '.svg#aller') format('svg');
