Change the color used in the header

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,7 +2,7 @@
 @include font('Quicksand', '../fonts/Quicksand')
 
 $font: Quicksand, sans-serif;
-$secondary-highlight: #717171;
+$secondary-highlight: #3C6E71;
 $primary-highlight: #fff0f0;
 $background-highlight: #e2682a;
 
