--- a/src/styles/pages/index/media-queries.scss
+++ b/src/styles/pages/index/media-queries.scss
@@ -1,6 +1,6 @@
 @media screen and (max-width: 1539px) {
     .content-text h1 { font-size: calc(29px + 1vmin) }
-    .content-text h2 { font-size: calc(17px + 1vmin) }
+    .content-text p { font-size: calc(11px + 1vmin) }
 }
 
 @media screen and (max-width: 1516px) {
@@ -21,6 +21,10 @@
             height: 200px;
         }
     }
+}
+
+@media screen and (max-width: 1417px) {
+    .content-text p { font-size: calc(10px + 1vmin)}
 }
 
 @media screen and (max-width: 1400px) {
