Add a small space between the text and the timeline

--- a/src/styles/pages/about/about.scss
+++ b/src/styles/pages/about/about.scss
@@ -27,9 +27,9 @@
 }
 
 .timeline {
+    margin-top: 15px;
     position: relative;
     max-width: 70%;
-    margin: 0 auto;
 }
 
 // Vertical Ruler
