I don't even know

--- a/src/styles/pages/index/media-queries.scss
+++ b/src/styles/pages/index/media-queries.scss
@@ -93,7 +93,7 @@
 }
 
 @media screen and (max-width: 712px) {
-    #body-header { padding: 1rem }
+    #body-header { padding: 0 }
     #header-logo { margin: 0 }
 }
 
