--- a/src/styles/pages/index/media-queries.scss
+++ b/src/styles/pages/index/media-queries.scss
@@ -41,12 +41,12 @@
                 ".   .   .   .   .   .   .   .   ."
                 ".   .   .   .   .   .   . extra ."
                 ".   .   .   .   .   .   . extra ."
-                ".   .   .   .   . sales . extra ."
-                ".   .   .   .   . sales . extra ."
-                ".   .   . coops . sales . extra ."
-                ". about . coops . sales . extra ."
-                ". about . coops . sales . extra ."
-                ". about . coops . sales . extra .";
+                ".   .   .   .   . coops . extra ."
+                ".   .   .   .   . coops . extra ."
+                ".   .   . sales . coops . extra ."
+                ". about . sales . coops . extra ."
+                ". about . sales . coops . extra ."
+                ". about . sales . coops . extra .";
     }
 }
 
@@ -83,12 +83,12 @@
                 ".   .   .   .   .   .   .   .   ."
                 ".   .   .   .   .   .   . extra ."
                 ".   .   .   .   .   .   . extra ."
-                ".   .   .   .   . sales . extra ."
-                ".   .   .   .   . sales . extra ."
-                ".   .   . coops . sales . extra ."
-                ". about . coops . sales . extra ."
-                ". about . coops . sales . extra ."
-                ". about . coops . sales . extra .";
+                ".   .   .   .   . coops . extra ."
+                ".   .   .   .   . coops . extra ."
+                ".   .   . sales . coops . extra ."
+                ". about . sales . coops . extra ."
+                ". about . sales . coops . extra ."
+                ". about . sales . coops . extra .";
     }
 }
 
@@ -104,9 +104,9 @@
                 ".     .     .     .     .     .      .     .     .  "
                 ".     .     .     .     .   about  about about about"
                 ".     .     .     .     .     .     .     .     .   "
-                ".     .     .     .   coops coops coops coops coops "
+                ".     .     .     .   sales sales sales sales sales "
                 ".     .     .     .     .     .      .     .     .  "
-                ".     .     .   sales sales sales sales sales sales "
+                ".     .     .   coops coops coops coops coops coops "
                 ".     .     .     .     .     .      .     .     .  "
                 ".     .   extra extra extra extra extra extra extra "
                 ".     .     .     .     .     .      .     .     .  ";
@@ -121,10 +121,10 @@
                 ".   .   .   .   .   .   .   .   ."
                 ".   .   .   .   .   .   . extra ."
                 ".   .   .   .   .   .   . extra ."
-                ".   .   .   .   . sales . extra ."
-                ".   .   .   .   . sales . extra ."
-                ".   .   . coops . sales . extra ."
-                ". about . coops . sales . extra ."
-                ". about . coops . sales . extra .";
+                ".   .   .   .   . coops . extra ."
+                ".   .   .   .   . coops . extra ."
+                ".   .   . sales . coops . extra ."
+                ". about . sales . coops . extra ."
+                ". about . sales . coops . extra .";
     }
 }
