Finish the first basic styling of the projects page

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -21,3 +21,4 @@ body { overflow-y: scroll }
 @import 'pages/index/index';
 @import 'pages/about/about';
 @import 'pages/coop/coop';
+@import 'pages/projecten/projecten';
