--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -22,3 +22,4 @@ body { overflow-y: scroll }
 @import 'pages/about/about';
 @import 'pages/coop/coop';
 @import 'pages/projecten/projecten';
+@import 'pages/extra/extra';
