--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -77,8 +77,9 @@
     .navlink-item { margin: 15px }
     .navlink-text { display: none }
     .navlink-link img { width: 35px }
-    #header-logo { width: 60vw; }
+    #header-logo { width: 40vw !important; }
     #header-navigation { margin: 30px 0 -10px 0 }
+    ul { margin-top: 3%}
 
     #body-header {
         display: block;
