Make paragraphs look a bit nicer on mobile screens

--- a/src/styles/pages/about/about.scss
+++ b/src/styles/pages/about/about.scss
@@ -16,6 +16,7 @@
     width: 85%;
     font-size: calc(9px + 1vmin);
     text-align: center;
+    margin-top: 4%;
 
     h1 {
         font-size: calc(29px + 1vmin);
