Improve textbox positioning and sizing
Improve textbox positioning and sizing on about pagee

--- a/src/styles/pages/about/about.scss
+++ b/src/styles/pages/about/about.scss
@@ -16,7 +16,8 @@
     width: 85%;
     font-size: calc(9px + 1vmin);
     text-align: center;
-    margin-top: 4%;
+    margin-top: 1%;
+    height: 100%;
 
     h1 {
         font-size: calc(29px + 1vmin);
