--- a/src/styles/pages/projecten/projecten.scss
+++ b/src/styles/pages/projecten/projecten.scss
@@ -1,4 +1,5 @@
 .project-text-wrapper {
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -13,7 +14,7 @@
         padding: 40px;
 
         p {
-            font-size: calc(20px + 1vmin);
+            font-size: calc(15px + 1vmin);
             margin-top: 2%;
             margin-bottom: 4%;
             line-height: 1.4;
