--- a/src/styles/pages/projecten/projecten.scss
+++ b/src/styles/pages/projecten/projecten.scss
@@ -5,55 +5,26 @@
 }
 
 .company-section {
-    display: grid;
-    padding: 30px 0;
+    display: flex;
+    flex-flow: column wrap;
+    padding: 4% 2% 6% 2%;
+    text-align: center;
     border-bottom: 1px solid black;
+
+    &:nth-child(even) { background: $background-highlight }
+
     .company-title {
         font-size: calc(1vmin + 14px);
         grid-area: title;
         justify-self: center;
         align-self: center;
+        margin-bottom: 2%;
     }
 
     .company-description {
-        font-size: calc(1vmin + 13px);
-        grid-area: description;
+        font-size: calc(1vmin + 15px);
         align-self: center;
         padding: 0 40px;
-    }
-
-    .company-video {
-        grid-area: video;
-        width: 450px;
-        height: 350px;
-        padding: 0 30px;
-
-        video { width: 100% }
-    }
-}
-
-.company-section:nth-child(even) {
-    background: $background-highlight;
-    grid-template: 0.4fr 1.6fr 0.4fr / 0.3fr 1.7fr;
-    grid-template-areas:
-            "title title"
-            "video description"
-            ". .";
-}
-
-.company-section:nth-child(odd) {
-    grid-template: 0.4fr 1.6fr 0.4fr / 1.7fr 0.3fr;
-    grid-template-areas:
-            "title title"
-            "description video"
-            ". .";
-}
-
-@media screen and (max-width: 1000px) {
-    .company-section {
-        .company-video {
-            width: 350px; height: 250px;
-        }
     }
 }
 
