--- a/src/styles/pages/projecten/projecten.scss
+++ b/src/styles/pages/projecten/projecten.scss
@@ -18,7 +18,7 @@
         grid-area: title;
         justify-self: center;
         align-self: center;
-        margin-bottom: 2%;
+        margin: 2% 0;
     }
 
     .company-description {
