Make logo in header a link and remove pointer events

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -14,6 +14,8 @@ html, body {
 
 body { overflow-y: scroll }
 
+#body-header--tagline img { pointer-events: none }
+
 // Page Partials
 @import "header";
 
