--- a/src/styles/pages/projecten/media-queries.scss
+++ b/src/styles/pages/projecten/media-queries.scss
@@ -1,26 +1,19 @@
 @media screen and (max-width: 767px) {
     h1 { font-size: calc(25px + 1vmin) }
-
-    .company-section {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-flow: column wrap;
-
-        .company-title {
-            margin-bottom: 4%;
-            flex: 0 1 auto;
-        }
-
-        .company-description {
-            flex: 0 1 auto;
-            margin-bottom: 5%;
+    #project-content-wrapper {
+        .texts {
+            padding: 20px;
         }
     }
 }
 
 @media screen and (max-width: 537px) {
     h1 { font-size: calc(20px + 1vmin) }
+    #project-content-wrapper {
+        .texts {
+            padding: 10px;
+        }
+    }
 }
 
 @media screen and (max-width: 430px) {
