--- a/src/styles/pages/projecten/projecten.scss
+++ b/src/styles/pages/projecten/projecten.scss
@@ -1,30 +1,39 @@
-#coop-content-wrapper {
-    display: flex;
-    flex-direction: column;
-    flex: 1 0 auto;
-}
-
-.company-section {
+#project-content-wrapper {
+    height: 100%;
+    margin-top: 1%;
     display: flex;
     flex-flow: column wrap;
-    padding: 4% 2% 6% 2%;
+    align-items: center;
+    justify-content: center;
     text-align: center;
-    border-bottom: 1px solid black;
 
-    &:nth-child(even) { background: $background-highlight }
+    .texts {
+        background: #fdfdfd;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-flow: column wrap;
+        width: 80%;
+        margin-bottom: 5%;
+        padding: 40px;
 
-    .company-title {
-        font-size: calc(1vmin + 14px);
-        grid-area: title;
-        justify-self: center;
-        align-self: center;
-        margin: 2% 0;
-    }
+        h1 {
+            text-decoration: underline solid $background-highlight;
+            padding: 10px;
+            margin: 10px 0 5px 0;
+        }
 
-    .company-description {
-        font-size: calc(1vmin + 15px);
-        align-self: center;
-        padding: 0 40px;
+        p {
+            padding: 10px;
+            width: 80%;
+            font-size: 17px;
+        }
+
+        :first-child {
+            font-size: calc(13px + 1vmin);
+            margin-bottom: 2%;
+            width: 100%;
+        }
     }
 }
 
