Change name of selector to the correct one

--- a/src/styles/pages/coop/coop.scss
+++ b/src/styles/pages/coop/coop.scss
@@ -1,9 +1,10 @@
-.project-text-wrapper {
+#sales-text-wrapper {
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
+    margin-top: 1%;
 
     .texts {
         margin-bottom: 5%;
