Make CSS consistent across pages

--- a/src/styles/pages/projecten/media-queries.scss
+++ b/src/styles/pages/projecten/media-queries.scss
@@ -2,7 +2,12 @@
     h1 { font-size: calc(25px + 1vmin) }
     #project-content-wrapper {
         .texts {
+            width: 90%;
             padding: 20px;
+            p {
+                width: 100%;
+                padding: 0;
+            }
         }
     }
 }
