Implement vertical media queries for Projects page
Improve vertical spacing on small screen sizes on every page

--- a/src/styles/pages/coop/media-queries.scss
+++ b/src/styles/pages/coop/media-queries.scss
@@ -1,5 +1,5 @@
 @media screen and (max-width: 1338px) {
-    .project-text-wrapper { margin-top: 5% }
+    #sales-text-wrapper { margin-top: 3vh }
 }
 
 @media screen and (max-width: 768px) {
@@ -7,9 +7,11 @@
 }
 
 @media screen and (max-width: 650px) {
-    .project-text-wrapper .texts {
-        padding: 40px 20px;
-        width: 85%;
+    #sales-text-wrapper {
+        .texts {
+            padding: 40px 20px;
+            width: 85%;
+        }
     }
 }
 
