--- a/src/styles/pages/extra/extra.scss
+++ b/src/styles/pages/extra/extra.scss
@@ -3,9 +3,9 @@
     align-items: center;
     justify-content: center;
     text-align: center;
+    height: 100%;
 
     .texts {
-        margin-bottom: 5%;
         background: #fdfdfd;
         width: 80%;
         display: flex;
