--- a/src/styles/pages/projecten/media-queries.scss
+++ b/src/styles/pages/projecten/media-queries.scss
@@ -24,3 +24,9 @@
 @media screen and (max-width: 430px) {
     h1 { font-size: calc(18px + 1vmin) }
 }
+
+@media screen and (max-height: 550px) {
+    #project-content-wrapper {
+        height: 100%;
+    }
+}
