--- a/src/styles/pages/projecten/projecten.scss
+++ b/src/styles/pages/projecten/projecten.scss
@@ -1,5 +1,6 @@
 #project-content-wrapper {
-    height: 100%;
+    height: 89%;
+    margin-top: 5vh;
     display: flex;
     flex-flow: column wrap;
     align-items: center;
@@ -13,7 +14,6 @@
         align-items: center;
         flex-flow: column wrap;
         width: 80%;
-        margin-bottom: 5%;
         padding: 40px;
 
         h1 {
