Tweak some media queries slightly

--- a/src/styles/pages/coop/media-queries.scss
+++ b/src/styles/pages/coop/media-queries.scss
@@ -8,8 +8,9 @@
 
 @media screen and (max-width: 650px) {
     #sales-text-wrapper {
+        margin-top: -4%;
+        padding: 20px;
         .texts {
-            padding: 40px 20px;
             width: 85%;
         }
     }
