Rename folders and files to the dutch versions for consistency sake
Rename 'about' folder and file to 'over_mij'
Rename 'coops' folder and files to 'sales'

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -21,7 +21,7 @@ body { overflow-y: scroll }
 
 // Pages
 @import 'pages/index/index';
-@import 'pages/about/about';
-@import 'pages/coop/coop';
+@import 'pages/over_mij/over_mij';
+@import 'pages/sales/sales';
 @import 'pages/projecten/projecten';
 @import 'pages/extra/extra';
