Change many media queries and much CSS for the texts page
Remove the empty files for the old pages

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -22,6 +22,6 @@ body { overflow-y: scroll }
 // Pages
 @import 'pages/index/index';
 @import 'pages/over_mij/over_mij';
-@import 'pages/sales/sales';
-@import 'pages/projecten/projecten';
-@import 'pages/extra/extra';
+
+// About, Projects and Sales page stylings
+@import 'pages/joint-pages';
