--- a/src/styles/pages/over_mij/media-queries.scss
+++ b/src/styles/pages/over_mij/media-queries.scss
@@ -14,9 +14,13 @@
 }
 
 @media screen and (max-width: 436px) {
+    .about-text-wrapper {
+        margin-top: 4%;
+    }
+
     pre { display: none }
-    h2 { margin-bottom: 10% }
-    p { font-size: 11px }
+    h2 { margin-bottom: 3% }
+    p { font-size: calc(9px + 1vmin) }
     .container::after { right: -35px }
 
     .left {
